
syntax = "proto3";

option java_package = "FriendshipService";
option java_multiple_files = true;


service FriendshipService {
  rpc CreateFriendship(AddFriendRequest) returns (AddFriendResponse);

  rpc GetAllFriendship(GetAllFriendRequest) returns (GetAllFriendResponse);

  rpc DeleteFriendship(DeleteFriendRequest) returns (DeleteFriendResponse);

  rpc CheckFriendStatus (StatusRequest) returns (StatusResponse);

  rpc GetBalanceWithFriend (BalanceRequest) returns (BalanceResponse);
}

message AddFriendRequest {
  string userOneId = 1;
  string userTwoId = 2;
}

message AddFriendResponse {
  string userOneId = 1;
  string userTwoId = 2;
}

message GetAllFriendRequest {
  string userOneId = 1;
}

message GetAllFriendResponse {
  string userOneId = 2;
  repeated string friendId = 1;
}

message StatusRequest {
  string user_id = 1;
  string friend_id = 2;
}

message StatusResponse {
  bool are_friends = 1;
}

message BalanceRequest {
  string user_id = 1;
  string friend_id = 2;
}

message BalanceResponse {
  string balance = 1;
}

message DeleteFriendRequest {
  string userOneId = 1;
  string userTwoId = 2;
}

message DeleteFriendResponse {
  bool res = 1;
}
